force-app/main/default/objects/CheckResultsJob__c/CheckResultsJob__c.object-meta.xml
<CustomObject>
    <label>Check Results Job</label>
    <nameField>
        <displayFormat>Job-{0000000}</displayFormat>
        <label>Check Results Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Results Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>