force-app/main/default/objects/CheckResultsJob__c/fields/CallCenterPriority__c.field-meta.xml
<CustomField>
    <fullName>CallCenterPriority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Center Priority</label>
    <referenceTo>CallCenterPriority__c</referenceTo>
    <relationshipLabel>Check Results Jobs</relationshipLabel>
    <relationshipName>Check_Results_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>