force-app/main/default/objects/CheckResultsJob__c/fields/CallCountFiltered__c.field-meta.xml
<CustomField>
    <fullName>CallCountFiltered__c</fullName>
    <label>Call Count Filtered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>