force-app/main/default/objects/CheckResultsJob__c/fields/Job_Result__c.field-meta.xml
<CustomField>
    <fullName>Job_Result__c</fullName>
    <label>Job Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>