force-app/main/default/objects/CheckResultsJob__c/fields/MatchingInventory__c.field-meta.xml
<CustomField>
    <fullName>MatchingInventory__c</fullName>
    <label>Matching Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>