force-app/main/default/objects/CheckResultsJob__c/fields/OBCMUserAddress__c.field-meta.xml
<CustomField>
    <fullName>OBCMUserAddress__c</fullName>
    <label>OBCM User Address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>