force-app/main/default/objects/CheckResultsJob__c/fields/RespondDateFiltered__c.field-meta.xml
<CustomField>
    <fullName>RespondDateFiltered__c</fullName>
    <label>Respond Date Filtered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>