force-app/main/default/objects/CheckResultsJob__c/fields/UnmatchingInventory__c.field-meta.xml
<CustomField>
    <fullName>UnmatchingInventory__c</fullName>
    <label>Unmatching Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>